# otus-cpp

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: main.yml  release.yml
src/: CMakeLists.txt  lib.cpp  main.cpp
test_env/: CMakeLists.txt  run_tests.cpp  test_cases.cpp
ut/: CMakeLists.txt  testMain.cpp
